--- a/index.html
+++ b/index.html
@@ -3,15 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VOLT Agency | Results-Driven Marketing Agency</title>
-    <meta name="description" content="We build brands that convert. Strategic marketing, creative campaigns, and data-driven results for ambitious businesses." />
-    <meta name="author" content="VOLT Agency" />
 
-    <meta property="og:title" content="VOLT Agency | Results-Driven Marketing" />
-    <meta property="og:description" content="Strategic marketing agency delivering measurable results for ambitious brands." />
+    <title>Traffic Angels — Profitable Traffic for Grey Niches</title>
+
+    <meta
+      name="description"
+      content="We drive profitable traffic to grey niches. Performance marketing for Forex, iGaming, Investment, and Recovery projects. We scale traffic where others fail moderation."
+    />
+
+    <meta name="author" content="Traffic Angels" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Traffic Angels — Profitable Traffic for Grey Niches" />
+    <meta
+      property="og:description"
+      content="Performance marketing for Forex, iGaming, Investment, and Recovery projects. We scale traffic where others fail moderation."
+    />
     <meta property="og:type" content="website" />
-    
-
   </head>
 
   <body>
